Fixing some layout bug

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -140,7 +140,7 @@ img[align=right] {
     h4 {
       font-size: 0.75em;
     }
-    p {
+    p, li {
       font-size: 0.75em;
     }
 }
