--- a/_sass/layouts/_page.scss
+++ b/_sass/layouts/_page.scss
@@ -1,5 +1,5 @@
 h1.title {
-    text-shadow: 1px 1px 2px $text-shadow;
+    @extend .header-txt-shadow;
 }
 
 .subtitle {
